--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -29,12 +29,14 @@ ratings:
   - "**.rb"
 exclude_paths:
 - vendor/
-- "css/animate.css"
-- "css/bootstrap.css"
-- "css/bootstrap.min.css"
-- "css/font-awesome-4.4.0/*"
-- "js/jquery.js"
-- "js/html5shiv-printshiv.min.js"
-- "js/bootstrap.min.js"
-- "js/jquery.easing.min.js"
-- "js/bootstrap.js"
+- "assets/css/animate.css"
+- "assets/css/animate.min.css"
+- "assets/css/bootstrap.css"
+- "assets/css/bootstrap.min.css"
+- "assets/css/font-awesome-4.4.0/*"
+- "assets/js/jquery.js"
+- "assets/js/jquery-3.1.0.min.js"
+- "assets/js/html5shiv-printshiv.min.js"
+- "assets/js/bootstrap.min.js"
+- "assets/js/jquery.easing.min.js"
+- "assets/js/bootstrap.js"
