--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.0.4",
+    "gulp-order": "^1.1.1",
     "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.4"
   }
